# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

bt_hdi_path = "//drivers/peripheral/bluetooth/hdi"

ohos_shared_library("bluetooth_hdi_adapter") {
  include_dirs = [
    "include",
    "$bt_hdi_path",
    "$bt_hdi_path/ohos/hardware/bt/v1_0",
    "$bt_hdi_path/ohos/hardware/bt/v1_0/client",
    "//third_party/bounds_checking_function/include",
  ]

  cflags = [ "-fPIC" ]

  sources = [
    "src/bluetooth_hci_callbacks.cpp",
    "src/bluetooth_hdi.cpp",
  ]

  deps = [
    "$bt_hdi_path:bluetooth_hdi_client",
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/host:libhdf_host",
    "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
    ]
  } else {
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
      "ipc:ipc_core",
    ]
  }

  subsystem_name = "communication"
  part_name = "bluetooth"
}
