# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

SUBSYSTEM_DIR = "//foundation/communication"
BT_ROOT = "//foundation/communication/bluetooth/services/bluetooth"
hdf_uhdf_path = "//drivers/adapter/uhdf2"

ohos_shared_library("bluetooth_server") {
  include_dirs = [
    "include",
    "//foundation/communication/bluetooth/frameworks/inner/common",
    "//foundation/communication/bluetooth/interfaces/inner_api/include",
    "//foundation/communication/bluetooth/services/bluetooth/service/include",
    "$hdf_uhdf_path/include/hdi",
  ]

  sources = [
    "src/bluetooth_a2dp_sink_server.cpp",
    "src/bluetooth_a2dp_source_server.cpp",
    "src/bluetooth_avrcp_ct_server.cpp",
    "src/bluetooth_avrcp_tg_server.cpp",
    "src/bluetooth_ble_advertiser_server.cpp",
    "src/bluetooth_ble_central_manager_server.cpp",
    "src/bluetooth_gatt_client_server.cpp",
    "src/bluetooth_gatt_server_server.cpp",
    "src/bluetooth_hfp_ag_server.cpp",
    "src/bluetooth_hfp_hf_server.cpp",
    "src/bluetooth_hid_host_server.cpp",
    "src/bluetooth_host_dumper.cpp",
    "src/bluetooth_host_server.cpp",
    "src/bluetooth_map_mce_server.cpp",
    "src/bluetooth_map_mse_server.cpp",
    "src/bluetooth_pbap_pce_server.cpp",
    "src/bluetooth_pbap_pse_server.cpp",
    "src/bluetooth_socket_server.cpp",
  ]

  deps = [
    "$BT_ROOT/etc/init:etc",
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth/common:btcommon",
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth/ipc:btipc_static",
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth/service:btservice",
    "$hdf_uhdf_path/hdi:libhdi",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "bluetooth"
  subsystem_name = "communication"
}

group("bluetooth_codec") {
  deps = [ "$BT_ROOT/service:btsbc" ]
}
