# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

ohos_shared_library("bluetooth_hal") {
  include_dirs = [
    "include",
    "hdi",
    "src",
    "hdi/ohos/hardware/bt/v1_0",
    "hdi/ohos/hardware/bt/v1_0/client",
    "hdi/ohos/hardware/bt/v1_0/server",
  ]

  cflags = [ "-fPIC" ]

  sources = [
    "hdi/ohos/hardware/bt/v1_0/bt_hci_callbacks_proxy.cpp",
    "hdi/ohos/hardware/bt/v1_0/bt_hci_callbacks_stub.cpp",
    "hdi/ohos/hardware/bt/v1_0/client/bt_hci_proxy.cpp",
    "hdi/ohos/hardware/bt/v1_0/server/bt_hci_driver.cpp",
    "hdi/ohos/hardware/bt/v1_0/server/bt_hci_service.cpp",
    "hdi/ohos/hardware/bt/v1_0/server/bt_hci_stub.cpp",
    "src/async_fd_watcher.cc",
    "src/bluetooth_address.cc",
    "src/bluetooth_hal.cpp",
    "src/bluetooth_hci_callbacks.cpp",
    "src/h4_protocol.cc",
    "src/hci_packetizer.cc",
    "src/hci_protocol.cc",
    "src/mct_protocol.cc",
    "src/vendor_interface.cc",
  ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/host:libhdf_host",
    "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
    "$hdf_uhdf_path/osal:libhdf_utils",
    "//utils/native/base:utils",
    "//utils/native/base:utilsecurec_shared",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "communication"
  part_name = "bluetooth_standard"
}
