# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

SUBSYSTEM_DIR = "//foundation/communication"
BT_ROOT = "//foundation/communication/bluetooth/services/bluetooth_standard"

ohos_shared_library("bluetooth_server") {
  include_dirs = [
    "include",
    "//foundation/communication/bluetooth/interfaces/innerkits/native_cpp/framework/common",
    "//foundation/communication/bluetooth/interfaces/innerkits/native_cpp/include",
    "//foundation/communication/bluetooth/services/bluetooth_standard/service/include",
  ]

  sources = [
    "src/bluetooth_a2dp_source_server.cpp",
    "src/bluetooth_ble_advertiser_server.cpp",
    "src/bluetooth_ble_central_manager_server.cpp",
    "src/bluetooth_gatt_client_server.cpp",
    "src/bluetooth_gatt_server_server.cpp",
    "src/bluetooth_host_server.cpp",
    "src/bluetooth_socket_server.cpp",
  ]

  deps = [
    "$BT_ROOT/etc/init:etc",
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth_standard/common:btcommon",
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth_standard/ipc:btipc_static",
    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth_standard/service:btservice",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  part_name = "bluetooth_standard"
  subsystem_name = "communication"
}

group("bluetooth_codec") {
  deps = [ "$BT_ROOT/service:btsbc" ]
}
