# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/communication/bluetooth/bluetooth.gni")

module_output_path = "bluetooth/framework_test/avrcp/"
SUBSYSTEM_DIR = "//foundation/communication"

###############################################################################
#1. intent(c++) get/set test without transport

config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = [
    "mock/include",
    "//third_party/json/include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/bluetooth/interfaces/inner_api/include",
    "//foundation/communication/bluetooth/frameworks/inner/common",
  ]
  defines = [
    "BTFW_LOG_TAG = \"bluetooth_test\"",
    "BTFW_LOG_DOMAIN = 0xD000103",
  ]
}

ohos_unittest("btfw_avrcp_tg_unit_test") {
  module_out_path = module_output_path

  sources = [ "avrcp_tg_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "$SUBSYSTEM_DIR/bluetooth/frameworks/inner:btframework",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_unittest("btfw_avrcp_ct_unit_test") {
  module_out_path = module_output_path

  sources = [ "avrcp_ct_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "$SUBSYSTEM_DIR/bluetooth/frameworks/inner:btframework",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

################################################################################
group("unittest") {
  testonly = true

  deps = []

  if (is_phone_product) {
    if (bluetooth_avrcp_ct_feature) {
      deps += [ ":btfw_avrcp_ct_unit_test" ]
    }

    if (bluetooth_avrcp_tg_feature) {
      deps += [ ":btfw_avrcp_tg_unit_test" ]
    }
  }
}
